tests/ui/transparent-enum-many.stderr
error: #[display(transparent)] requires exactly one field
 --> tests/ui/transparent-enum-many.rs:5:5
  |
5 | /     #[display(transparent)]
6 | |     Other(anyhow::Error, String),
  | |________________________________^
